--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body.work{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(224,68,63,1) 0%, rgba(189,159,37,0.8856676459646359) 100%);
 }
 
+
+
 header{
    text-align: center;
    padding:25px;
@@ -34,7 +36,7 @@ main aside{
     border-radius: 5px;
 }
 
-.startBtn {
+button {
     background-color: #ff9966;
     border-radius: 5px;
     border:none;
@@ -45,11 +47,15 @@ main aside{
     cursor: pointer;
 }
 
-.startBtn:focus{
+button:focus{
     outline:none;
 }
 
-.startBtn:hover{
+button:hover{
     background-color: #ff5500;
     border-radius: 10px;
+}
+
+.completed{
+    max-width:150px;
 }
