--- a/style.css
+++ b/style.css
@@ -66,3 +66,13 @@ button:hover{
 .history.show{
     display: block;
 }
+
+.leftTime{
+    font-size: 2.5rem;
+}
+
+
+.playStatus{
+    cursor: pointer;
+    font-size: 2.5rem;
+}
